--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -2,8 +2,192 @@
 
 至少在面试时能说得清楚是什么。
 
-1. HTML5最新规范、HTML5特性；
-2. [理解web标准（ES6标准，必学）](http://es6.ruanyifeng.com/#docs/intro)；
+#### HTML5最新规范、HTML5特性；
+
+1. 语义化的Web，让任何计算机更容易理解；
+2. 消弱对第三方插件的依赖，以往播放音频或视频需要借助Flash，选择HTML5已原生支持多媒体；
+3. 更丰富的应用：
+    - 新增绘图元素canvas，可直接操纵图片、制作游戏和动态广告效果等；
+    - 拓展JavaScript API，例如Web存储、地理定位、拖放、操纵历史浏览记录和读取文件等；
+    - 创建离线Web程序，解决无网络时无法使用Web应用的情况；
+    - 引入Web Workers规范，解决Web应用越来越复杂的计算；
+4. 引进多种类型的新元素，例如构建文档的元素article、figure、header等，标识文本的元素mark、wbr等。
+
+#### HTML语义化；
+
+HTML5中的语义化就是让元素、属性或属性值有含义，更准确地标记特定类型地内容。对元素语义化地目的是让元素地语义和呈现分离，元素只负责文档内容地结构与含义，而CSS样式控制内容地呈现，像b元素，没有语义但能将字体变粗，这类元素违背了语义化的目的，将会被抛弃。
+
+    [理解HTML语义化](https://www.cnblogs.com/fliu/articles/5244866.html)
+    
+#### Web Workers
+
+1. 什么是Web Workers？
+
+当在 HTML 页面中执行脚本时，页面的状态是不可响应的，直到脚本已完成。
+
+web worker 是运行在后台的 JavaScript，独立于其他脚本，不会影响页面的性能。您可以继续做任何愿意做的事情：点击、选取内容等等，而此时 web worker 在后台运行。
+
+所有主流浏览器均支持 web worker，`除了 IE`。
+
+2. 实例
+
+```js
+<!DOCTYPE html>
+<html>
+<body>
+
+<p>Count numbers: <output id="result"></output></p>
+<button onclick="startWorker()">Start Worker</button>
+<button onclick="stopWorker()">Stop Worker</button>
+<br /><br />
+
+<script>
+    var w;
+
+    function startWorker(){
+        //检测 Web Worker 支持
+        if(typeof(Worker)!=="undefined"){
+            //创建 Web Worker 对象
+            if(typeof(w)=="undefined"){
+                w=new Worker("demo_workers.js");
+            }
+            //向 web worker 添加一个 "onmessage" 事件监听器：
+            w.onmessage = function (event) {
+                document.getElementById("result").innerHTML=event.data;
+            };
+        }else{
+            document.getElementById("result").innerHTML="Sorry, your browser does not support Web Workers...";
+        }
+    }
+
+    function stopWorker(){
+        //终止 Web Worker
+        w.terminate();
+    }
+</script>
+
+</body>
+</html>
+
+//demo_workers.js
+var i=0;
+
+function timedCount(){
+    i=i+1;
+    postMessage(i);
+    setTimeout("timedCount()",500);
+}
+
+timedCount();
+```
+
+以上代码中重要的部分是 `postMessage()` 方法 - 它用于向 HTML 页面传回一段消息。
+
+#### Web存储
+
+localStorage、seesionStorage、Cookie、indexedDB、userData；
+**Web Storage**
+1. localStorage
+
+本地存储，永远不会过期，即使浏览器关闭，还会存在，同源地本地存储可以共享。
+
+2. sessionStorage
+
+会话存储，只能应用于页面会话期间，当关闭页面或浏览器地时候，会话存储中地数据就会被自动清除。
+
+```js
+//在第一张页面中设置两种存储方式
+localStorage.setItem('local','local data');
+sessionStorage.setItem('session','session data');
+
+//在另一张页面中输出存储地数据
+var local = localStorage.getItem('local'),
+    session = sessionStorage.getItem('session');
+```
+
+*Web Storage End*
+
+3. IndexedDB
+
+IndexedDB 是一种低级API，用于客户端存储大量结构化数据(包括, 文件/ blobs)。该API使用索引来实现对该数据的高性能搜索。
+
+一个单独的数据库项目的大小没有限制。然而可能会限制每个 IndexedDB 数据库的大小。这个限制（以及用户界面对它进行断言的方式）在各个浏览器上也可能有所不同。
+
+4. userData
+
+针对IE6、IE7，微软单独提供了userData实现本地存储。它是一种持久化存储方式，因此即使关闭了浏览器也不会清除这些数据，但可以设置失效日期。userData能根存储1MB左右的数据。userData将数据寄存在HTML元素中。
+
+5. Cookie
+
+cookie 是存储于访问者的计算机中的变量。每当同一台计算机通过浏览器请求某个页面时，就会发送这个 cookie。你可以使用 JavaScript 来创建和取回 cookie 的值。
+
+```js
+//简单用法
+document.cookie = "name=oeschger";
+document.cookie = "favorite_food=tripe";
+console.log(document.cookie);
+// 显示: name=oeschger;favorite_food=tripe
+```
+
+Cookie的缺陷：
+- Cookie可以指定过期时间（Expire），可以将登录的用户名和密码等存储到cookie中，下次登录可省去重新输入，简化了流程。但这个网站中的每个HTTP请求都会带上这些cookie信息，增加了HTTP首部的内容，如果网站访问量巨大，将会影响宽带；
+- Cookie不适合存储一些隐私或敏感信息（例如用户名、密码等），因为Cookie会在网络中传递，很容易被劫持，劫持后可以伪造请求，执行一些危险操作（例如删除或修改信息）。CSRF（跨站请求伪造）就是通过劫持Cookie的方式进行攻击的；
+- Cookie的大小被浏览器限制在4KB左右，只能存储简单的信息，不能应对复杂的存储需求，例如缓存表单信息、数据同步等。有些表单要输入的项特别多，需要花费时间填写，但在填写过程中，有可能会因为误操作而将页面关闭。如果把表单信息缓存了起来，那么在重新打开页面时可为表单中的控件自动填充内容，不必重新输入。数据同步是指当网络突然断开时，将数据缓存起来，待到网络恢复后，再将缓存的数据与服务器同步，避免了数据丢失。
+
+6. 用什么方法可以防止Cookie被盗取？
+
+Cookie是先由浏览器向服务器发起请求，再由服务器响应后回传Ser-Cookie首部（此时可设置HttpOnly属性）向客户端浏览器写入Cookie。在给Cookie设置HttpOnly属性后，就能够禁止页面的js访问这个Cookie，从而避免被盗取。
+
+#### [操纵历史浏览记录](https://developer.mozilla.org/zh-CN/docs/Web/API/History_API)
+
+- `History.pushState(state,title,url)`：按指定的名称和URL（如果提供该参数）将数据push进会话历史栈，数据被DOM进行不透明处理
+    - state — 状态对象state是一个JavaScript对象，通过pushState () 创建新的历史记录条目。
+    - title - Firefox 目前忽略这个参数，但未来可能会用到。在此处传一个空字符串应该可以安全的防范未来这个方法的更改。或者，你可以为跳转的state传递一个短标题。
+    - url - 该参数定义了新的历史URL记录。
+
+```js
+let stateObj = {
+    foo: "bar",
+};
+
+history.pushState(stateObj, "page 2", "bar.html");
+```
+
+- `popstate事件`：当活动历史记录条目更改时，将触发popstate事件。如果被激活的历史记录条目是通过对history.pushState（）的调用创建的，或者受到对history.replaceState（）的调用的影响，popstate事件的state属性包含历史条目的状态对象的副本。
+
+需要注意的是调用`history.pushState()`或`history.replaceState()不会触发popstate事件。只有在做出浏览器动作时，才会触发该事件`，如用户点击浏览器的回退按钮（或者在Javascript代码中调用history.back()）
+
+```js
+window.onpopstate = function(event) {
+  alert("location: " + document.location + ", state: " + JSON.stringify(event.state));
+};
+history.pushState({page: 1}, "title 1", "?page=1");
+history.pushState({page: 2}, "title 2", "?page=2");
+history.replaceState({page: 3}, "title 3", "?page=3");
+history.back(); // alerts "location: http://example.com/example.html?page=1, state: {"page":1}"
+history.back(); // alerts "location: http://example.com/example.html, state: null
+history.go(2);
+```
+
+#### 内存泄漏
+
+- [什么是内存泄漏](http://www.ruanyifeng.com/blog/2017/04/memory-leak.html)？
+
+程序的运行需要内存。只要程序提出要求，操作系统或者运行时（runtime）就必须供给内存。
+
+对于持续运行的服务进程（daemon），必须及时释放不再用到的内存。否则，内存占用越来越高，轻则影响系统性能，重则导致进程崩溃。
+
+`不再用到的内存，没有及时释放，就叫做内存泄漏`（memory leak）。
+
+- 常见内存泄漏原因
+    1. 意外的全局变量；
+    2. 被遗忘的计时器或回调；
+    3. 超出DOM引用；
+    4. 闭包；
+    5. dom清空或删除时，事件未清除导致的内存泄漏；
+    
+
+#### [理解web标准（ES6标准，必学）](http://es6.ruanyifeng.com/#docs/intro)；
     1. let、const；
     2. Module（import、export）；
     3. class、extends、supper；
@@ -55,85 +239,91 @@
             9. Promise.prototype.finally() （Jordan Harband）;
             10. 模板字符串修改（Tim Disney）;
 
+#### js面向对象编程方法；
+#### css3新特性；
 
-3. HTML语义化；
+1. 完善了选择器（包括属性、关系、伪类、伪元素）；
+2. 新增阴影、圆角、Web字体、渐变，能替代以往得用图像才能实现的效果，这样既能减少HTTP请求数，还能提升页面加载速度；
+3. 对背景不再局限于颜色、填充方式、定位，现在可以一次性使用多张背景图、控制背景尺寸、裁剪背景图像等；
+4. 引入了过渡和动画两个属性，可处理简单或复杂的样式变化，不仅能让页面生动真实，还能摆脱对flash的依赖，远离大段地js脚本；
+5. 新增两种全新地布局：多列布局（grid）和伸缩盒（flex-box）；
+6. 可让元素进行2D或3D变形，包括旋转、移动、缩放、扭曲。在动画中使用3D地变形会新增一个渲染层，将重绘（页面渲染地一个环节）减少到一次，提升动画性能。
 
-    [理解HTML语义化](https://www.cnblogs.com/fliu/articles/5244866.html)
+#### css3动画，及css3相关；
 
-4. js面向对象编程方法；
-5. css3常用属性；
-6. css3动画，及css3相关；
-7. es6，require.js，amd；
-8. [版本控制](https://www.cnblogs.com/allanli/p/git_commands.html)；
-    - `安装Git`
+#### es6，require.js，amd；
+
+#### [版本控制](https://www.cnblogs.com/allanli/p/git_commands.html)；
+
+- `安装Git`
     - git config user.name [AAA]
     - git config user.email [邮箱地址]
     - git config --global user.name "Your Name"
     - git config --global user.email "email@example.com"
-    - `创建版本库`
+- `创建版本库`
     - git init //初始化本地git环境
     - git add . //把本地的修改加到stage中
     - git commit -m 'comments here' //把stage中的修改提交到本地库
-    - `查看修改`
+- `查看修改`
     - git status //查看当前分支有哪些修改
     - git diff //查看当前没有add的内容
-    - `版本回退`
+- `版本回退`
     - git log //查看当前分支上面的日志信息（显示从最近到最远的提交日志）
     - git reset --hard HEAD //撤销本地修改
     - git reflog  //查看命令历史，可以查看到每次提交的commit id，用来配合git reset --hard commit_id来返回到回退前的版本
-    - `撤销修改`
+- `撤销修改`
     - git checkout -- file  //可以丢弃工作区的修改
-    - `删除文件`
+- `删除文件`
     - git rm file //从版本库中删除该文件。可以用 git checkout -- file 把误删的文件恢复到最新版本（只能恢复文件到最新版本，你会丢失最近一次提交后你修改的内容）。
-    - `添加远程库`
+- `添加远程库`
     - git remote add origin git@github.com:账号/learngit.it  //关联一个远程库(远程库的名字就是origin)
     - git push -u origin master  //第一次推送master分支的所有内容
-    - `从远程库克隆`
+- `从远程库克隆`
     - git clone XXX//克隆一份代码到本地仓库
-    - `创建与合并分支`
+- `创建与合并分支`
     - git checkout -b dev //创建+切换分支。git checkout命令加上-b参数表示创建并切换
     - git branch name // 创建分支
     - git branch //查看分支
     - git checkout name //切换分支
     - git merge name //合并某分支到当前分支
     - git branch -d name //删除分支
-    - `解决冲突`
+- `解决冲突`
     - git log --graph --pretty=oneline --abbrev-commit  //查看分支的合并情况
-    - `Bug分支`
+- `Bug分支`
     - git stash //可以把当前工作现场“储藏”起来，等以后恢复现场后继续工作
     - git stash list //查看所有的缓存
     - git stash pop //恢复本地分支到缓存状态，同时把stash内容删除
-    - `功能分支`
+- `功能分支`
     - git branch -D name  //分支还没有被合并，如果删除，将丢失掉修改，如果要强行删除，需要使用大写的-D参数
-    - `多人协作`
+- `多人协作`
     - git remote  //查看远程库的信息（当你从远程仓库克隆时，实际上Git自动把本地的master分支和远程的master分支对应起来了，并且，远程仓库的默认名称是origin）
     - git remote -v  //显示更详细的信息
     - git push origin branch-name  //推送分支，就是把该分支上的所有本地提交推送到远程库。推送时，要指定本地分支，这样，Git就会把该分支推送到远程库对应的远程分支上
     - git checkout -b branch-name origin/branch-name  //在本地创建和远程分支对应的分支
     - git pull  //把远程库的代码更新到工作台
     - git branch --set-upstream-to branch-name origin/branch-name //创建本地分支和远程分支的链接关系
-    - `Rebase`
+- `Rebase`
     - git rebase  //可以把本地未push的分叉提交历史整理成直线；
-    - `创建标签`
+- `创建标签`
     - git tag name //可以在需要打标签的分支上打一个新标签
     - git tag name commit_id //对提交过的commit打分支
     - git tag  //查看标签
     - git tag -a name -m "version 0.1 released" commit_id //创建带有说明的标签，用-a指定标签名，-m指定说明文字：
     - git show tagname  //查看标签信息（标签不是按时间顺序列出，而是按字母排序的）
-    - `操作标签`
+- `操作标签`
     - git push origin tagname  //推送某个标签到远程（创建的标签都只存储在本地，不会自动推送到远程）
     - git push origin --tags //一次性推送全部尚未推送到远程的本地标签
     - git tag -d v0.1 //删除标签
     - git push origin :refs/tags/v0.9  //从远程删除
-    - `自定义Git`
+- `自定义Git`
     - git config --global color.ui true  //让Git显示颜色，会让命令输出看起来更醒目
     - .gitignore文件  //把要忽略的文件名填进去，Git就会自动忽略这些文件。
-    - `额外`
+- `额外`
     - git blame someFile //查看某个文件的每一行的修改记录（）谁在什么时候修改的）
     - echo $HOME //查看git config的HOME路径
     - export $HOME=/c/gitconfig //配置git config的HOME路径
     - ---
-    - [廖雪峰-Git](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013743256916071d599b3aed534aaab22a0db6c4e07fd0000)
+- [廖雪峰-Git](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013743256916071d599b3aed534aaab22a0db6c4e07fd0000)
     - git add 的具体使用：
         - git add -A  提交所有变化
         - git add -u  提交被修改(modified)和被删除(deleted)文件，不包括新文件(new)
@@ -177,11 +367,11 @@
         - git remote add origin git@gitee.com:liaoxuefeng/learngit.git  //关联远程库
         - git remote rm origin //删除已有的Github远程库
 
-9. HTTP协议、https、http2；
+#### HTTP协议、https、http2；
 
     [TCP/IP、HTTP、HTTPS、HTTP2.0](https://www.cnblogs.com/w1570631036/p/8119747.html)
 
-10. webpack；
+#### webpack；
 
 - 核心概念：
     1. Entry：入口，Webpack执行构建的第一步将从Entry开始，可抽象成输入；
@@ -193,18 +383,15 @@
     
 > Webpack 启动后会从 Entry 里配置的 Module 开始递归解析 Entry 依赖的所有 Module。 每找到一个 Module， 就会根据配置的 Loader 去找出对应的转换规则，对 Module 进行转换后，再解析出当前 Module 依赖的 Module。 这些模块会以 Entry 为单位进行分组，一个 Entry 和其所有依赖的 Module 被分到一个组也就是一个 Chunk。最后 Webpack 会把所有 Chunk 转换成文件输出。 在整个流程中 Webpack 会在恰当的时机执行 Plugin 里定义的逻辑。
 
-11. sass；
-12. typescript；
-13. state；
+#### sass；
+#### typescript；
+#### state；
 
     [Redux入门教程（快速上手）](https://segmentfault.com/a/1190000011474522)
     
     [redux原来如此简单](https://segmentfault.com/a/1190000016311891)
 
-14. rxjs；
-15. canvas；
-16. 数据mock；
-17. 前后端分离（客户端渲染，数据渲染交给前端来做）；
-18. meta配置；
-19. dns预解析；
-20. 缓存；
+#### rxjs；
+#### canvas；
+#### 数据mock；
+#### 前后端分离（客户端渲染，数据渲染交给前端来做）；
