--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -231,6 +231,145 @@ foo = function() {
 
 #### 10.Array常用函数
 
+- 方法：
+
+1. Array.from(arrayLike,?mapFn,?thisArg)：从类数组对象或者可迭代对象中创建一个新的数组实例:
+    - arrayLike：想要转换成数组的伪数组对象或可迭代对象。
+    - mapFn：可选参数，如果指定了该参数，新数组中的每个元素会执行该回调函数。
+    - thisArg：可选参数，执行回调函数 mapFn 时 this 对象。
+   ```js
+   console.log(Array.from('foo'));
+    // expected output: Array ["f", "o", "o"]
+
+    console.log(Array.from([1, 2, 3], x => x + x));
+    // expected output: Array [2, 4, 6]
+    ```
+
+2. Array.isArray(obj)：用来判断某个变量是否是一个数组对象。
+    - obj：需要检测的值。
+    ```js
+    Array.isArray([1, 2, 3]);  
+    // true
+    Array.isArray({foo: 123}); 
+    // false
+    Array.isArray("foobar");   
+    // false
+    Array.isArray(undefined);  
+    // false
+    ```
+
+3. Array.of(element0, ?element1, ?..., ?elementN)：根据一组参数来创建新的数组实例，支持任意的参数数量和类型。
+    - 任elementN：意个参数，将按顺序成为返回数组中的元素。
+    ```js
+    Array.of(7);       // [7] 
+    Array.of(1, 2, 3); // [1, 2, 3]
+
+    Array(7);          // [ , , , , , , ]
+    Array(1, 2, 3);    // [1, 2, 3]
+    ```
+
+##### 数组实例
+
+- 修改器方法
+
+`下面的这些方法会改变调用它们的对象自身的值：`
+
+1. [Array.prototype.copyWithin(target,?start,?end)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/copyWithin)：在数组内部，将一段元素序列拷贝到另一段元素序列上，覆盖原有的值。
+    - 0 为基底的索引，复制序列到该位置。如果是负数，target 将从末尾开始计算。如果 target 大于等于 arr.length，将会不发生拷贝。如果 target 在 start 之后，复制的序列将被修改以符合 arr.length。
+    - 0 为基底的索引，开始复制元素的起始位置。如果是负数，start 将从末尾开始计算。如果 start 被忽略，copyWithin 将会从0开始复制。
+    - 0 为基底的索引，开始复制元素的结束位置。如果 end 被忽略，copyWithin 方法将会一直复制至数组结尾（默认为 arr.length）。
+    ```js
+    var array1 = ['a', 'b', 'c', 'd', 'e'];
+
+    // copy to index 0 the element at index 3
+    console.log(array1.copyWithin(0, 3, 4));
+    // expected output: Array ["d", "b", "c", "d", "e"]
+
+    // copy to index 1 all elements from index 3 to the end
+    console.log(array1.copyWithin(1, 3));
+    // expected output: Array ["d", "d", "e", "d", "e"]
+    
+    console.log(array1);
+    // expected output: Array ["d", "d", "e", "d", "e"]
+    ```
+
+2. Array.prototype.fill(value,?start ,?end ) ：将数组中指定区间的所有元素的值，都替换成某个固定的值。
+    - 用来填充数组元素的值。
+    - 起始索引，默认值为0。
+    - 终止索引，默认值为 this.length。
+    ```js
+    var array1 = [1, 2, 3, 4];
+
+    // fill with 0 from position 2 until position 4
+    console.log(array1.fill(0, 2, 4));
+    // expected output: [1, 2, 0, 0]
+
+    // fill with 5 from position 1
+    console.log(array1.fill(5, 1));
+    // expected output: [1, 5, 5, 5]
+
+    console.log(array1.fill(6));
+    // expected output: [6, 6, 6, 6]
+    ```
+
+3. Array.prototype.pop()：删除数组的最后一个元素，并返回这个元素。
+4. Array.prototype.push(element1, ..., elementN)：在数组的末尾增加一个或多个元素，并返回数组的新长度。
+5. Array.prototype.shift()：删除数组的第一个元素，并返回这个元素。
+6. Array.prototype.unshift(element1, ..., elementN)：在数组的开头增加一个或多个元素，并返回数组的新长度。
+7. Array.prototype.reverse()：颠倒数组中元素的排列顺序，即原先的第一个变为最后一个，原先的最后一个变为第一个。
+8. [Array.prototype.sort(?compareFunction)](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array/sort)：对数组元素进行排序，并返回当前数组。
+9. Array.prototype.splice(start,?deleteCount,item1, item2, ... )：在任意的位置给数组添加或删除任意个元素。
+    - 指定修改的开始位置（从0计数）
+    - 整数，表示要移除的数组元素的个数。
+    - 要添加进数组的元素,从start 位置开始。如果不指定，则 splice() 将只删除数组元素。
+    ```js
+    var months = ['Jan', 'March', 'April', 'June'];
+    months.splice(1, 0, 'Feb');
+    // inserts at 1st index position
+    console.log(months);
+    // expected output: Array ['Jan', 'Feb', 'March', 'April', 'June']
+
+    months.splice(4, 1, 'May');
+    // replaces 1 element at 4th index
+    console.log(months);
+    // expected output: Array ['Jan', 'Feb', 'March', 'April', 'May']
+    ```
+
+##### 访问方法
+
+`下面的这些方法绝对不会改变调用它们的对象的值，只会返回一个新的数组或者返回一个其它的期望值。`
+
+1. Array.prototype.concat()：返回一个由当前数组和其它若干个数组或者若干个非数组值组合而成的新数组。
+    - var new_array = old_array.concat(value1[, value2[, ...[, valueN]]])
+    ```js
+    var array1 = ['a', 'b', 'c'];
+    var array2 = ['d', 'e', 'f'];
+
+    console.log(array1.concat(array2));
+    // expected output: Array ["a", "b", "c", "d", "e", "f"]
+    ```
+
+2. Array.prototype.includes(valueToFind[, fromIndex]) ：判断当前数组是否包含某指定的值，如果是返回 true，否则返回 false。
+    - 需要查找的元素值
+    - 从fromIndex 索引处开始查找 valueToFind。
+    ```js
+    var array1 = [1, 2, 3];
+
+    console.log(array1.includes(2));
+    // expected output: true
+
+    var pets = ['cat', 'dog', 'bat'];
+
+    console.log(pets.includes('cat'));
+    // expected output: true
+
+    console.log(pets.includes('at'));
+    // expected output: false
+    ```
+
+3. Array.prototype.join([separator])：连接所有数组元素组成一个字符串。
+    - 指定一个字符串来分隔数组的每个元素。
+
 #### 11.String常用函数
 
 #### 12.ES5 + ES6(用过哪些)
@@ -239,9 +378,26 @@ foo = function() {
 
 #### 14.Angular脏检查机制
 
-**diff算法**
+[react diff算法](https://blog.csdn.net/qq_26708777/article/details/78107577)
 
 #### 15.手写Angular指令，知道其生命周期
+
+- vue 生命周期
+
+- react 生命周期
+    1. componentWillMount();
+    2. reder();
+    3. componentDidMount();
+    4. ----
+    5. componenWillReceiveProps();
+    6. ----
+    7. shouldComponentUpdate();
+    8. componentWillUpdate();
+    9. reder();
+    10. componentDidUpdate();
+    11. ----
+    12. componentWillUnmount();
+
 
 #### 16.手动实现MVC
 
@@ -259,9 +415,9 @@ foo = function() {
 
 #### 3.XSS与CSRF（必考）
 
-    [十大常见web漏洞及防范](https://blog.csdn.net/weixin_41656968/article/details/81270071)
+[十大常见web漏洞及防范](https://blog.csdn.net/weixin_41656968/article/details/81270071)
     
-    [总结 XSS 与 CSRF 两种跨站攻击](https://www.cnblogs.com/wangyuyu/p/3388180.html)
+[总结 XSS 与 CSRF 两种跨站攻击](https://www.cnblogs.com/wangyuyu/p/3388180.html)
 
 #### 4.学习经历和方法
 
