--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -229,7 +229,14 @@ foo = function() {
 
 #### 9.事件捕捉，捕获，冒泡，代理
 
-#### 10.Array常用函数
+#### 10.[Array](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Array)常用函数
+
+- 属性
+
+1. Array.length： Array 构造函数的 length 属性，其值为1（注意该属性为静态属性，不是数组实例的 length 属性）。
+    ```js
+    console.log(Array.length) //1
+    ```
 
 - 方法：
 
@@ -269,6 +276,14 @@ foo = function() {
     ```
 
 ##### 数组实例
+
+- 属性
+
+1. Array.prototype.constructor： 所有的数组实例都继承了这个属性，它的值就是 Array，表明了所有的数组都是由 Array 构造出来的。
+2. Array.prototype.length： 因为 Array.prototype 也是个数组，所以它也有 length 属性，这个值为 0，因为它是个空数组。
+    ```js
+    console.log(Array.prototype.length) //0
+    ```
 
 - 修改器方法
 
@@ -370,7 +385,341 @@ foo = function() {
 3. Array.prototype.join([separator])：连接所有数组元素组成一个字符串。
     - 指定一个字符串来分隔数组的每个元素。
 
-#### 11.String常用函数
+4. Array.prototype.slice(?begin,?end)：抽取当前数组中的一段元素组合成一个新数组。
+    - 从该索引处开始提取原数组中的元素（从0开始）;
+    - 在该索引处结束提取原数组元素（从0开始）。
+    ```js
+    var animals = ['ant', 'bison', 'camel', 'duck', 'elephant'];
+
+    console.log(animals.slice(2));
+    // expected output: Array ["camel", "duck", "elephant"]
+
+    console.log(animals.slice(2, 4));
+    // expected output: Array ["camel", "duck"]
+
+    console.log(animals.slice(1, 5));
+    // expected output: Array ["bison", "camel", "duck", "elephant"]
+    ```
+
+5. Array.prototype.toSource() :返回一个表示当前数组字面量的字符串。遮蔽了原型链上的 Object.prototype.toSource() 方法。
+    - 该特性是非标准的，请尽量不要在生产环境中使用它！
+    ```js
+    var alpha = new Array("a", "b", "c");
+
+    alpha.toSource();   //返回["a", "b", "c"]
+    ```
+
+6. Array.prototype.toString():返回一个由所有数组元素组合而成的字符串。遮蔽了原型链上的 Object.prototype.toString() 方法。
+
+7. Array.prototype.toLocaleString():返回一个由所有数组元素组合而成的本地化后的字符串。遮蔽了原型链上的 Object.prototype.toLocaleString() 方法.
+    ```js
+    var array1 = [1, 'a', new Date('21 Dec 1997 14:12:00 UTC')];
+    var localeString = array1.toLocaleString('en', {timeZone: "UTC"});
+
+    console.log(localeString);
+    // expected output: "1,a,12/21/1997, 2:12:00 PM",
+    // This assumes "en" locale and UTC timezone - your results may vary
+    ```
+8. Array.prototype.indexOf(searchElement[, fromIndex = 0]):返回数组中第一个与指定值相等的元素的索引，如果找不到这样的元素，则返回 -1.
+    - 要查找的元素;
+    - 开始查找的位置。
+    ```js
+    var beasts = ['ant', 'bison', 'camel', 'duck', 'bison'];
+
+    console.log(beasts.indexOf('bison'));
+    // expected output: 1
+
+    // start from index 2
+    console.log(beasts.indexOf('bison', 2));
+    // expected output: 4
+
+    console.log(beasts.indexOf('giraffe'));
+    // expected output: -1
+    ```
+
+9. Array.prototype.lastIndexOf(searchElement[, fromIndex = arr.length - 1]):返回数组中最后一个（从右边数第一个）与指定值相等的元素的索引，如果找不到这样的元素，则返回 -1。
+    - 被查找的元素。
+    - 从此位置开始逆向查找。
+
+##### 迭代方法
+
+`在下面的众多遍历方法中，有很多方法都需要指定一个回调函数作为参数`。`在每一个数组元素都分别执行完回调函数之前，数组的length属性会被缓存在某个地方`，所以，如果你在回调函数中为当前数组添加了新的元素，那么那些新添加的元素是不会被遍历到的。此外，如果在回调函数中对当前数组进行了其它修改，比如改变某个元素的值或者删掉某个元素，那么随后的遍历操作可能会受到未预期的影响。总之，`不要尝试在遍历过程中对原数组进行任何修改`，虽然规范对这样的操作进行了详细的定义，但为了可读性和可维护性，请不要这样做。
+
+1. Array.prototype.forEach(callback()[, thisArg]): 为数组中的每个元素执行一次回调函数。
+    - callback:为数组中每个元素执行的函数，该函数接收三个参数：
+        - currentValue: 数组中正在处理的当前元素
+        - index: 数组中正在处理的当前元素的索引
+        - array: forEach() 方法正在操作的数组
+    - thisArg: 可选参数。当执行回调函数时用作 this 的值(参考对象)。
+
+2. Array.prototype.every(callback()[, thisArg]): 如果数组中的每个元素都满足测试函数，则返回 true，否则返回 false。
+3. Array.prototype.some(callback()[, thisArg]): 如果数组中至少有一个元素满足测试函数，则返回 true，否则返回 false。
+4. Array.prototype.filter(callback()[, thisArg]): 将所有在过滤函数中返回 true 的数组元素放进一个新数组中并返回。
+5. Array.prototype.map(callback()[, thisArg]): 返回一个由回调函数的返回值组成的新数组。
+6. Array.prototype.find(callback()[, thisArg]): 找到第一个满足测试函数的元素并返回那个元素的值，如果找不到，则返回 undefined。
+7. Array.prototype.findIndex(callback()[, thisArg]): 找到第一个满足测试函数的元素并返回那个元素的索引，如果找不到，则返回 -1。
+8. Array.prototype.keys(): 返回一个数组迭代器对象，该迭代器会包含所有数组元素的键。
+    ```js
+    var array1 = ['a', 'b', 'c'];
+    var iterator = array1.keys(); 
+    
+    for (let key of iterator) {
+    console.log(key); // expected output: 0 1 2
+    }
+    ```
+
+9. Array.prototype.values() : 返回一个数组迭代器对象，该迭代器会包含所有数组元素的值。
+    ```js
+    const array1 = ['a', 'b', 'c'];
+    const iterator = array1.values();
+
+    for (const value of iterator) {
+    console.log(value); // expected output: "a" "b" "c"
+    }
+    ```
+
+10. Array.prototype.reduce(callback[, initialValue]): 从左到右为每个数组元素执行一次回调函数，并把上次回调函数的返回值放在一个暂存器中传给下次回调函数，并返回最后一次回调函数的返回值。
+    - callback: 一个回调函数，用来操作数组中的每个元素，可接受四个参数：
+        - previousValue: 上一次调用回调的返回值，或提供的 initialValue
+        - currentValue: 当前被处理的元素
+        - currentIndex: 当前处理元素的索引
+        - array: 调用 reduce 的数组
+
+11. Array.prototype.reduceRight(callback[, initialValue]): 同Array.prototype.reduce()，方法接受一个函数作为累加器（accumulator）和数组的每个值（从右到左）将其减少为单个值。
+12. Array.prototype.entries(): 返回一个数组迭代器对象，该迭代器会包含所有数组元素的键值对。
+    ```js
+    var array1 = ['a', 'b', 'c'];
+
+    var iterator1 = array1.entries();
+
+    console.log(iterator1.next().value);
+    // expected output: Array [0, "a"]
+
+    console.log(iterator1.next().value);
+    // expected output: Array [1, "b"]
+    ```
+
+
+#### 11.[String](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/String)常用函数
+
+- 方法:
+
+1. String.fromCharCode(num1, ..., numN) : 通过一串 Unicode 创建字符串。
+    - 一系列UTF-16代码单元的数字。 范围介于0到65535（0xFFFF）之间。 大于0xFFFF的数字将被截断。 不进行有效性检查
+    - 返回一个长度为N的字符串，由N个指定的UTF-16代码单元组成.
+    ```js
+    console.log(String.fromCharCode(189, 43, 190, 61));
+    // expected output: "½+¾="
+    ```
+
+2. String.fromCodePoint(num1[, ...[, numN]]): 通过一串 码点 创建字符串。
+    - 一串 Unicode 编码位置，即“代码点”。
+    - 使用指定的 Unicode 编码位置创建的字符串。
+    ```js
+    console.log(String.fromCodePoint(9731, 9733, 9842, 0x2F804));
+    // expected output: "☃★♲你"
+    ```
+
+3. String.raw(callSite, ...substitutions) : 通过模板字符串创建字符串
+    - 一个模板字符串的“调用点对象”。类似{ raw: ['foo', 'bar', 'baz'] }。
+    - 任意个可选的参数，表示任意个内插表达式对应的值。
+    ```js
+    let name = "Bob";
+    //String.raw`templateString`: 模板字符串。
+    String.raw `Hi\n${name}!`;             
+    // "Hi\\nBob!"，内插表达式还可以正常运行
+
+    String.raw({raw: "test"}, 0, 1, 2); 
+    // "t0e1s2t"，我认为你通常不需要把它当成普通函数来调用
+    ```
+
+- String实例
+
+1. `String.prototype.charAt(index)`: 返回特定位置的字符。
+    -     一个介于0 和字符串长度减1之间的整数。 (0~length-1).如果没有提供索引，charAt() 将使用0。
+
+2. String.prototype.charCodeAt(): 返回表示给定索引的字符的Unicode的值。
+3. String.prototype.codePointAt(): 返回使用UTF-16编码的给定位置的值的非负整数。
+4. `String.prototype.concat(string2, string3[, ..., stringN])`: 连接两个字符串文本，并返回一个新的字符串。
+    - 和原字符串连接的多个字符串
+    ```js
+    var hello = "Hello, ";
+    console.log(hello.concat("Kevin", " have a nice day.")); /* Hello, Kevin have a nice day. */
+    ```
+
+5. `String.prototype.includes(searchString[, position])`: 判断一个字符串里是否包含其他字符串。
+    - 要在此字符串中搜索的字符串
+    - 可选。从当前字符串的哪个索引位置开始搜寻子字符串，默认值为0。
+    ```js
+    var str = 'To be, or not to be, that is the question.';
+
+    console.log(str.includes('To be'));       // true
+    console.log(str.includes('question'));    // true
+    console.log(str.includes('nonexistent')); // false
+    console.log(str.includes('To be', 1));    // false
+    console.log(str.includes('TO BE'));       // false
+    ```
+
+6. String.prototype.endsWith(): 判断一个字符串的结尾是否包含其他字符串中的字符
+7. `String.prototype.indexOf(searchValue[, fromIndex])`: 从字符串对象中返回首个被发现的给定值的索引值，如果没有找到则返回-1。
+    - 一个字符串表示被查找的值。
+    - 表示调用该方法的字符串中开始查找的位置。可以是任意整数。默认值为 0。如果 fromIndex < 0 则查找整个字符串（如同传进了 0）。如果 fromIndex >= str.length，则该方法返回 -1。当被查找的字符串是一个空字符串，fromIndex <= 0时返回0，0 < fromIndex <= str.length时返回fromIndex，fromIndex > str.length时返回str.length。
+    ```js
+    "Blue Whale".indexOf("Blue");     // returns  0
+    "Blue Whale".indexOf("Blute");    // returns -1
+    "Blue Whale".indexOf("Whale", 0); // returns  5
+    "Blue Whale".indexOf("Whale", 5); // returns  5
+    "Blue Whale".indexOf("", 9);      // returns  9
+    "Blue Whale".indexOf("", 10);     // returns 10
+    "Blue Whale".indexOf("", 11);     // returns 10         
+    ```
+
+8. String.prototype.lastIndexOf(): 从字符串对象中返回最后一个被发现的给定值的索引值，如果没有找到则返回-1。
+9. String.prototype.localeCompare(): 返回一个数字表示是否引用字符串在排序中位于比较字符串的前面，后面，或者二者相同。
+10. String.prototype.match(): 使用正则表达式与字符串相比较。
+11. String.prototype.normalize(): 返回调用字符串值的Unicode标准化形式。
+12. String.prototype.padEnd(): 在当前字符串尾部填充指定的字符串， 直到达到指定的长度。 返回一个新的字符串
+13. String.prototype.padStart(): 在当前字符串头部填充指定的字符串， 直到达到指定的长度。 返回一个新的字符串。
+14. `String.prototype.repeat(count)`: 返回指定重复次数的由元素组成的字符串对象。
+    - 介于0和正无穷大之间的整数 : [0, +∞) 。表示在新构造的字符串中重复了多少遍原字符串。
+    ```js
+    "abc".repeat(-1)     // RangeError: repeat count must be positive and less than inifinity
+    "abc".repeat(0)      // ""
+    "abc".repeat(1)      // "abc"
+    "abc".repeat(2)      // "abcabc"
+    "abc".repeat(3.5)    // "abcabcabc" 参数count将会被自动转换成整数.
+    "abc".repeat(1/0)    // RangeError: repeat count must be positive and less than inifinity
+
+    ({toString : () => "abc", repeat : String.prototype.repeat}).repeat(2)   
+    //"abcabc",repeat是一个通用方法,也就是它的调用者可以不是一个字符串对象.
+    ```
+
+15. `String.prototype.replace(regexp|substr, newSubStr|function)`: 被用来在正则表达式和字符串直接比较，然后用新的子串来替换被匹配的子串。
+    - 一个RegExp 对象或者其字面量。该正则所匹配的内容会被第二个参数的返回值替换掉。
+    - 一个将被 newSubStr 替换的 字符串。其被视为一整个字符串，而不是一个正则表达式。仅第一个匹配项会被替换。
+    - 用于替换掉第一个参数在原字符串中的匹配部分的字符串。该字符串中可以内插一些特殊的变量名。参考下面的使用字符串作为参数。
+    - 一个用来创建新子字符串的函数，该函数的返回值将替换掉第一个参数匹配到的结果。参考下面的指定一个函数作为参数。
+    ```js
+    var p = 'The quick brown fox jumps over the lazy dog. If the dog reacted, was it really lazy?';
+
+    var regex = /dog/gi;
+
+    console.log(p.replace(regex, 'ferret'));
+    // expected output: "The quick brown fox jumps over the lazy ferret. If the ferret reacted, was it really lazy?"
+
+    console.log(p.replace('dog', 'monkey'));
+    // expected output: "The quick brown fox jumps over the lazy monkey. If the dog reacted, was it really lazy?"
+
+    ```
+
+16. String.prototype.search(): 对正则表达式和指定字符串进行匹配搜索，返回第一个出现的匹配项的下标
+17. `String.prototype.slice(beginSlice[, endSlice])`: 摘取一个字符串区域，返回一个新的字符串。
+    - 从该索引（以 0 为基数）处开始提取原字符串中的字符。如果值为负数，会被当做 sourceLength + beginSlice 看待，这里的sourceLength 是字符串的长度 (例如， 如果beginSlice 是 -3 则看作是: sourceLength - 3)
+    - 可选。在该索引（以 0 为基数）处结束提取字符串。如果省略该参数，slice会一直提取到字符串末尾。如果该参数为负数，则被看作是 sourceLength + endSlice，这里的 sourceLength 就是字符串的长度(例如，如果 endSlice 是 -3，则是, sourceLength - 3)。
+    ```js
+    //使用 slice() 来创建新字符串:
+    var str1 = 'The morning is upon us.';
+    var str2 = str1.slice(4, -2);
+
+    console.log(str2); // OUTPUT: morning is upon u
+
+    //在 slice() 使用了负值索引:
+    var str = 'The morning is upon us.';
+    str.slice(-3);     // returns 'us.'
+    str.slice(-3, -1); // returns 'us'
+    str.slice(0, -1);  // returns 'The morning is upon us'
+    ```
+18. `String.prototype.split([separator[, limit]])`: 通过分离字符串成字串，将字符串对象分割成字符串数组。
+    - 指定表示每个拆分应发生的点的字符串。separator 可以是一个字符串或正则表达式。 如果纯文本分隔符包含多个字符，则必须找到整个字符串来表示分割点。如果在str中省略或不出现分隔符，则返回的数组包含一个由整个字符串组成的元素。如果分隔符为空字符串，则将str原字符串中每个字符的数组形式返回。
+    - 一个整数，限定返回的分割片段数量。当提供此参数时，split 方法会在指定分隔符的每次出现时分割该字符串，但在限制条目已放入数组时停止。如果在达到指定限制之前达到字符串的末尾，它可能仍然包含少于限制的条目。新数组中不返回剩下的文本。
+    ```js
+    function splitString(stringToSplit, separator) {
+    var arrayOfStrings = stringToSplit.split(separator);
+
+    console.log('The original string is: "' + stringToSplit + '"');
+    console.log('The separator is: "' + separator + '"');
+    console.log("The array has " + arrayOfStrings.length + " elements: ");
+
+    for (var i=0; i < arrayOfStrings.length; i++)
+        console.log(arrayOfStrings[i] + " / ");
+    }
+
+    var tempestString = "Oh brave new world that has such people in it.";
+    var monthString = "Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec";
+
+    var space = " ";
+    var comma = ",";
+
+    splitString(tempestString, space);
+    splitString(tempestString);
+    splitString(monthString, comma);
+
+    //The original string is: "Oh brave new world that has such people in it."
+    //The separator is: " "
+    //The array has 10 elements: Oh / brave / new / world / that / has / such / people / in / it. /
+
+    //The original string is: "Oh brave new world that has such people in it."
+    //The separator is: "undefined"
+    //The array has 1 elements: Oh brave new world that has such people in it. /
+
+    //The original string is: "Jan,Feb,Mar,Apr,May,Jun,Jul,Aug,Sep,Oct,Nov,Dec"
+    //The separator is: ","
+    //The array has 12 elements: Jan / Feb / Mar / Apr / May / Jun / Jul / Aug / Sep / Oct / Nov / Dec /
+    ```
+
+19. String.prototype.startsWith(): 判断字符串的起始位置是否匹配其他字符串中的字符。
+20. `String.prototype.substr(start[, length])`: 通过指定字符数返回在指定位置开始的字符串中的字符。
+    - 开始提取字符的位置。如果为负值，则被看作 strLength + start，其中 strLength 为字符串的长度（例如，如果 start 为 -3，则被看作 strLength + (-3)）。
+    - 可选。提取的字符数。
+    ```js
+    var str = "abcdefghij";
+
+    console.log("(1,2): "    + str.substr(1,2));   // (1,2): bc
+    console.log("(-3,2): "   + str.substr(-3,2));  // (-3,2): hi
+    console.log("(-3): "     + str.substr(-3));    // (-3): hij
+    console.log("(1): "      + str.substr(1));     // (1): bcdefghij
+    console.log("(-20, 2): " + str.substr(-20,2)); // (-20, 2): ab
+    console.log("(20, 2): "  + str.substr(20,2));  // (20, 2):
+    ```
+
+21. `String.prototype.substring(indexStart[, indexEnd])`: String.prototype.toLocaleLowerCase()
+    - 需要截取的第一个字符的索引，该字符作为返回的字符串的首字母
+    - 可选。一个 0 到字符串长度之间的整数，以该数字为索引的字符不包含在截取的字符串内。
+    - 返回包含给定字符串的指定部分的新字符串。
+    ```js
+    var anyString = "Mozilla";
+
+    // 输出 "Moz"
+    console.log(anyString.substring(0,3));
+    console.log(anyString.substring(3,0));
+    console.log(anyString.substring(3,-3));
+    console.log(anyString.substring(3,NaN));
+    console.log(anyString.substring(-2,3));
+    console.log(anyString.substring(NaN,3));
+
+    // 输出 "lla"
+    console.log(anyString.substring(4,7));
+    console.log(anyString.substring(7,4));
+
+    // 输出 ""
+    console.log(anyString.substring(4,4));
+
+    // 输出 "Mozill"
+    console.log(anyString.substring(0,6));
+
+    // 输出 "Mozilla"
+    console.log(anyString.substring(0,7));
+    console.log(anyString.substring(0,10));
+    ```
+
+22. String.prototype.toLocaleLowerCase(): 根据当前区域设置，将符串中的字符转换成小写。对于大多数语言来说，toLowerCase的返回值是一致的。
+23. String.prototype.toLocaleUpperCase(): 根据当前区域设置，将字符串中的字符转换成大写，对于大多数语言来说，toUpperCase的返回值是一致的。
+24. `String.prototype.toLowerCase()`: 将字符串转换成小写并返回。
+25. String.prototype.toSource(): 返回一个对象文字代表着特定的对象。你可以使用这个返回值来创建新的对象。重写Object.prototype.toSource 方法。
+26. String.prototype.toString(): 返回用字符串表示的特定对象。重写 Object.prototype.toString 方法。
+27. `String.prototype.toUpperCase()`: 将字符串转换成大写并返回。
+28. `String.prototype.trim()`: 从字符串的开始和结尾去除空格。参照部分 ECMAScript 5 标准
+29. String.prototype.valueOf(): 返回特定对象的原始值。重写 Object.prototype.valueOf 方法。
 
 #### 12.ES5 + ES6(用过哪些)
 
