--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -387,11 +387,38 @@ history.go(2);
 #### typescript；
 #### state；
 
-    [Redux入门教程（快速上手）](https://segmentfault.com/a/1190000011474522)
+  [Redux入门教程（快速上手）](https://segmentfault.com/a/1190000011474522)
     
-    [redux原来如此简单](https://segmentfault.com/a/1190000016311891)
+  [redux原来如此简单](https://segmentfault.com/a/1190000016311891)
 
 #### rxjs；
 #### canvas；
+
+
 #### 数据mock；
 #### 前后端分离（客户端渲染，数据渲染交给前端来做）；
+
+#### 抽象类、接口
+
+> 用于限定某个对象所必须拥有的公共操作方法的一种结构，称之为接口（interface）
+> 
+>只要一个类里面有一个方法是抽象方 法，那么这个类就要定义为抽象类，抽象类也要使用“abstract”关键字来修饰；在抽象类里面可以有不是抽象的方法和成员属性，但只要有一个方法是抽象的方法，这个类就必须声明 为抽象类，使用“abstract”来修饰。
+
+什么是抽象方法？我们在类里面定义的没有方法体的方法就是抽象方法，所谓的没有方 
+法体指的是，在方法声明的时候没有大括号以及其中的内容，而是直接在声明时在方法名后 
+加上分号结束，另外在声明抽象方法时还要加一个关键字“abstract”来修饰； 例如： 
+```js
+abstract function fun1(); 
+```
+
+接口和抽象类的概念不一样。接口是对动作的抽象，抽象类是对根源的抽象。
+
+抽象类表示的是，这个对象是什么。接口表示的是，这个对象能做什么。比如，男人，女人，这两个类（如果是类的话……），他们的抽象类是人。说明，他们都是人。
+
+当你关注一个事物的本质的时候，用抽象类；当你关注一个操作的时候，用接口。
+
+一个类只能继承一个类（抽象类）(正如人不可能同时是生物和非生物)，但是可以实现多个接口(吃饭接口、走路接口)。
+
+[接口和抽象类有什么区别](http://www.cnblogs.com/yongjiapei/p/5494894.html)
+
+[继承、覆盖、重载与多态](https://www.cnblogs.com/jeknight/p/6941088.html)
