--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -422,3 +422,77 @@ abstract function fun1();
 [接口和抽象类有什么区别](http://www.cnblogs.com/yongjiapei/p/5494894.html)
 
 [继承、覆盖、重载与多态](https://www.cnblogs.com/jeknight/p/6941088.html)
+
+#### JS的OOP
+
+[Javascript 面向对象编程（一）：封装](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_encapsulation.html)
+
+[Javascript面向对象编程（二）：构造函数的继承](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_inheritance.html)
+
+[Javascript面向对象编程（三）：非构造函数的继承](http://www.ruanyifeng.com/blog/2010/05/object-oriented_javascript_inheritance_continued.html)
+
+- 浅拷贝
+
+```js
+var Chinese = {
+    nation:'中国'
+};
+var Doctor ={
+    career:'医生'
+}
+
+function extendCopy(p) {
+    var c = {};
+    for (var i in p) {
+        c[i] = p[i];
+    }
+    c.uber = p;
+    return c;
+}
+//使用
+var Doctor = extendCopy(Chinese);
+Doctor.career = '医生';
+console.log(Doctor.nation); // 中国
+```
+
+浅拷贝有一个问题。那就是，如果父对象的属性等于数组或另一个对象，那么实际上，子对象获得的只是一个内存地址，而不是真正拷贝，因此存在父对象被篡改的可能。
+
+```js
+Chinese.birthPlaces = ['北京','上海','香港'];
+var Doctor = extendCopy(Chinese);
+Doctor.birthPlaces.push('厦门');
+console.log(Doctor.birthPlaces); //北京, 上海, 香港, 厦门
+console.log(Chinese.birthPlaces); //北京, 上海, 香港, 厦门
+```
+
+- 深拷贝
+
+递归调用"浅拷贝"就行了
+
+```js
+var Chinese = {
+    nation:'中国'
+};
+var Doctor ={
+    career:'医生'
+}
+
+function deepCopy(p, c) {
+    var c = c || {};
+    for (var i in p) {
+        if (typeof p[i] === 'object') {
+            c[i] = (p[i].constructor === Array) ? [] : {};
+            deepCopy(p[i], c[i]);
+        } else {
+            c[i] = p[i];
+        }
+    }
+    return c;
+}
+//使用
+var Doctor = deepCopy(Chinese);
+Chinese.birthPlaces = ['北京','上海','香港'];
+Doctor.birthPlaces.push('厦门');
+console.log(Doctor.birthPlaces); //北京, 上海, 香港, 厦门
+console.log(Chinese.birthPlaces); //北京, 上海, 香港
+```
