--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -394,6 +394,25 @@ history.go(2);
 #### rxjs；
 #### canvas；
 
+[廖雪峰 canvas](https://www.liaoxuefeng.com/wiki/001434446689867b27157e896e74d51a89c25cc8b43bdb3000/00143449990549914b596ac1da54a228a6fa9643e88bc0c000#0)
+
+[学习HTML5 Canvas这一篇文章就够了](https://blog.csdn.net/u012468376/article/details/73350998)
+
+#### NodeJS
+
+[NodeJS入门](https://www.nodebeginner.org/index-zh-cn.html)
+
+[廖雪峰 NodeJS](https://www.liaoxuefeng.com/wiki/001434446689867b27157e896e74d51a89c25cc8b43bdb3000/001434501245426ad4b91f2b880464ba876a8e3043fc8ef000)
+
+[nodeschool.io](https://nodeschool.io/zh-cn/)
+
+- 面试题
+
+[《8步神曲》！NodeJS面试题](https://baijiahao.baidu.com/s?id=1589718820513455212&wfr=spider&for=pc)
+
+[nodejs面试题](https://www.cnblogs.com/DCL1314/p/7903085.html)
+
+[Node.js 面试题总结](https://www.jianshu.com/p/b5e99ee63d3c)
 
 #### 数据mock；
 #### 前后端分离（客户端渲染，数据渲染交给前端来做）；
