--- a/docs/resources/interview/1.面试前需要注意些什么/概念.md
+++ b/docs/resources/interview/1.面试前需要注意些什么/概念.md
@@ -265,16 +265,16 @@ history.go(2);
     - git add . //把本地的修改加到stage中
     - git commit -m 'comments here' //把stage中的修改提交到本地库
 - `查看修改`
-    - git status //查看当前分支有哪些修改
-    - git diff //查看当前没有add的内容
+    - git status //查看当前分支没有add过的哪些文件被修改过
+    - git diff //查看当前没有add的内容的文件的修改内容
 - `版本回退`
-    - git log //查看当前分支上面的日志信息（显示从最近到最远的提交日志）
-    - git reset --hard HEAD //撤销本地修改
+    - git log //查看当前分支上面的日志信息（显示从最近到最远的提交日志）（提交的版本）
+    - git reset --hard HEAD //撤销本地修改（回退到当前版本）
     - git reflog  //查看命令历史，可以查看到每次提交的commit id，用来配合git reset --hard commit_id来返回到回退前的版本
 - `撤销修改`
     - git checkout -- file  //可以丢弃工作区的修改
 - `删除文件`
-    - git rm file //从版本库中删除该文件。可以用 git checkout -- file 把误删的文件恢复到最新版本（只能恢复文件到最新版本，你会丢失最近一次提交后你修改的内容）。
+    - git rm file //从版本库中删除该文件。可以用 git checkout -- file 把误删的文件恢复到最新版本（只能恢复文件到最新版本，你会丢失最近一次提交后你修改的内容）。（git checkout其实是用版本库里的版本替换工作区的版本，无论工作区是修改还是删除，都可以“一键还原”。）
 - `添加远程库`
     - git remote add origin git@github.com:账号/learngit.it  //关联一个远程库(远程库的名字就是origin)
     - git push -u origin master  //第一次推送master分支的所有内容
@@ -305,7 +305,7 @@ history.go(2);
 - `Rebase`
     - git rebase  //可以把本地未push的分叉提交历史整理成直线；
 - `创建标签`
-    - git tag name //可以在需要打标签的分支上打一个新标签
+    - git tag name //可以在需要打标签的分支上打一个新标签 
     - git tag name commit_id //对提交过的commit打分支
     - git tag  //查看标签
     - git tag -a name -m "version 0.1 released" commit_id //创建带有说明的标签，用-a指定标签名，-m指定说明文字：
@@ -322,7 +322,7 @@ history.go(2);
     - git blame someFile //查看某个文件的每一行的修改记录（）谁在什么时候修改的）
     - echo $HOME //查看git config的HOME路径
     - export $HOME=/c/gitconfig //配置git config的HOME路径
-    - ---
+- ---
 - [廖雪峰-Git](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/0013743256916071d599b3aed534aaab22a0db6c4e07fd0000)
     - git add 的具体使用：
         - git add -A  提交所有变化
@@ -332,44 +332,145 @@ history.go(2);
         - git diff readme.txt //查看对readme.txt作了什么修改
         - git diff --cache //查看已经add但是没有commit的内容
         - git diff HEAD //上面两个内容的合并
-    - git reset --hard HEAD的具体使用：
-        - HEAD 表示当前版本（指向当前分支）；
+    - git log的具体使用：（每提交一个新版本，实际上Git就会把它们自动串成一条时间线。）
+        - git log  //查看完整的提交日志
+        - git log --pretty=oneline  //查看简略信息，如commit id
+    - git reset的具体使用：git reset命令既可以回退版本，也可以把暂存区的修改回退到工作区。
+        - git reset --hard HEAD //撤销本地修改（回退到当前版本）（不过，这是有条件的，你还没有把自己的本地版本库推送到远程）
+        - HEAD 表示当前版本（指向当前分支，也就是最新的提交commit id）；
         - HEAD^ 表示上一个版本；
         - HEAD^^ 表示上上一个版本；
         - HEAD~100 表示上100个版本；
         - git reset --hard 1094a //返回回退前commit id是1094adb...的版本
         - git reset HEAD file //把暂存区的修改撤销掉（unstage），重新放回工作区
         - git reset命令既可以回退版本，也可以把暂存区的修改回退到工作区。当我们用HEAD时，表示最新的版本。
+        - Git的版本回退速度非常快，因为Git在内部有个指向当前版本的HEAD指针，当你回退版本的时候，Git仅仅是把HEAD从指向上一个版本（或其他commit id），然后顺便把工作区的文件更新了。所以你让HEAD指向哪个版本号，你就把当前版本定位在哪。
+        - git reflog  //查看命令历史，以便确定要回到未来的哪个版本。可以查看到每次提交的commit id，用来配合git reset --hard commit_id来返回到回退前的版本
+    - 工作区和暂存区
+        - 工作区：就是电脑里能看到的目录；
+        - 版本库：工作区有一个隐藏目录.git，这个不算工作区，而是Git的版本库；其中最重要的就是称为 `stage` 的暂存区，还有Git为我们自动创建的第一个分支 master，以及指向 master 的一个指针叫HEAD。
+        - 需要提交的文件修改通通放在暂存区(git add)，然后一次性提交暂存区的所有修改（git commit）；git add命令实际上就是把要提交的所有修改放到暂存区（Stage），然后，执行git commit就可以一次性把暂存区的所有修改提交到分支。
+    - Git跟踪并管理的是修改，而非文件。每次修改，如果不用git add到暂存区，那就不会加入到commit中。
     - git checkout的具体使用：
         - git checkout master/branch //切换到某个分支
-        - git checkout -- file //文件在工作区的修改全部撤销：让这个文件回到最近一次git commit或git add时的状态。
+        - git checkout -- file //`撤销修改`，文件在工作区的修改全部撤销：让这个文件回到最近一次git commit或git add时的状态。命令中的`--`很重要，没有--，就变成了“切换到另一个分支”的命令
         - git checkout -b test //新建test分支
         - git checkout -d test //删除test分支
+    - 小结
+        - 场景1：当你改乱了工作区某个文件的内容，想直接丢弃工作区的修改时，用命令git checkout -- file。
+        - 场景2：当你不但改乱了工作区某个文件的内容，还添加到了暂存区时，想丢弃修改，分两步，第一步用命令git reset HEAD file，就回到了场景1，第二步按场景1操作。
+        - 场景3：已经提交了不合适的修改到版本库时，想要撤销本次提交，git reset --hard commit_id，不过前提是没有推送到远程库。
+    - git remote的具体使用：
+        - git remote  //查看远程库的信息
+        - git remote -v  //显示更详细的信息
+        - git remote add origin git@gitee.com:liaoxuefeng/learngit.git  //把一个已有的本地仓库与远程库关联。添加后，远程库的名字就是origin，这是Git默认的叫法
+        - git remote rm origin //删除已有的Github远程库
     - git push的具体使用： //把本地库的修改提交到远程库中
         - `git push -u origin master`：把本地库的内容推送到远程，用git push命令，实际上是把当前分支master推送到远程。由于远程库是空的，我们第一次推送master分支时，加上了-u参数，Git不但会把本地的master分支内容推送的远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令。
         - git push origin master：把本地master分支的最新修改推送至GitHub，现在，你就拥有了真正的分布式版本库！
+    - [远程仓库](https://www.liaoxuefeng.com/wiki/0013739516305929606dd18361248578c67b8067c8c017b000/001374385852170d9c7adf13c30429b9660d0eb689dd43a000)：分布式版本系统的最大好处之一是在本地工作完全不需要考虑远程库的存在，也就是有没有联网都可以正常工作，而SVN在没有联网的时候是拒绝干活的！当有网络的时候，再把本地提交推送一下就完成了同步，真是太方便了！
+        - Git是分布式版本控制系统，同一个Git仓库，可以分布到不同的机器上。最早，肯定只有一台机器有一个原始版本库，此后，别的机器可以“克隆”这个原始版本库，而且每台机器的版本库其实都是一样的，并没有主次之分。实际情况往往是这样，找一台电脑充当服务器的角色，每天24小时开机，其他每个人都从这个“服务器”仓库克隆一份到自己的电脑上，并且各自把各自的提交推送到服务器仓库里，也从服务器仓库中拉取别人的提交。Github网站就是提供Git仓库托管服务的，所以，只要注册一个GitHub账号，就可以免费获得Git远程仓库。
+        - 创建SSH Key：`ssh-keygen -t rsa -C "youremail@example.com"`。在用户主目录里找到.ssh目录，里面有id_rsa和id_rsa.pub两个文件，这两个就是SSH Key的秘钥对，id_rsa是私钥，不能泄露出去，id_rsa.pub是公钥，可以放心地告诉任何人。
+    - 添加远程仓库（先有本地库，后有远程库）：
+        - 要关联一个远程库，使用命令git remote add origin git@server-name:path/repo-name.git；
+        - 关联后，使用命令git push -u origin master第一次推送master分支的所有内容；
+        - 此后，每次本地提交后，只要有必要，就可以使用命令git push origin master推送最新修改；
+    - 从远程库克隆（先有远程库，后有本地库）：
+        - git clone git@github.com:michaelliao/gitskills.git
+        - Git支持多种协议，包括https，但通过ssh支持的原生git协议速度最快。使用https除了速度慢以外，还有个最大的麻烦是每次推送都必须输入口令，但是在某些只开放http端口的公司内部就无法使用ssh协议而只能用https。
+    - 分支管理：创建了一个属于你自己的分支，别人看不到，还继续在原来的分支上正常工作，而你在自己的分支上干活，想提交就提交，直到开发完毕后，再一次性合并到原来的分支上，这样，既安全，又不影响别人工作。
     - git branch的具体使用：
         - git branch //查看当前分支
         - git branch dev //创建分支
         - git branch -r/-a //查看远程分支/全部分支
+        - git branch -d dev  //删除分支（如果分支还没有被合并，如果删除，将丢失掉修改，所以会销毁失败）
+        - git branch -D dev  //如果要丢弃一个没有被合并过的分支，强行删除，需要使用大写的-D参数
+    - 创建与合并分支：（Git创建一个分支很快，因为除了增加一个dev指针，改改HEAD的指向，工作区的文件都没有任何变化！）
+        - 每次提交，Git都把它们串成一条时间线，这条时间线就是一个分支。截止到目前，只有一条时间线，在Git里，这个分支叫`主分支`，即`maste`分支。`HEAD`严格来说不是指向提交，而是指向master，master才是指向提交的，所以，`HEAD指向的就是当前分支`。
+        - 一开始的时候，master分支是一条线，Git用master指向最新的提交，再用HEAD指向master，就能确定当前分支，以及当前分支的提交点；
+        - 每次提交，master分支都会向前移动一步，这样，随着你不断提交，master分支的线也越来越长；
+        - 当我们创建新的分支，例如dev时，Git新建了一个指针叫dev，指向master相同的提交，再把HEAD指向dev，就表示当前分支在dev上；
+        - 从现在开始，对工作区的修改和提交就是针对dev分支了，比如新提交一次后，dev指针往前移动一步，而master指针不变；
+        - 假如我们在dev上的工作完成了，就可以把dev合并到master上。Git怎么合并呢？最简单的方法，就是直接把master指向dev的当前提交，就完成了合并；
+     - 创建与合并分支（命令）：
+        - 查看分支：git branch
+        - 创建分支：git branch name
+        - 切换分支：git checkout name
+        - 创建+切换分支：git checkout -b name
+        - 合并某分支到当前分支：git merge name
+        - 删除分支：git branch -d name
+    - 解决冲突：
+        - 当master分支和feature1分支各自都分别有新的提交时，这种情况下，Git无法执行“快速合并”，只能试图把各自的修改合并起来，但这种合并就可能会有冲突，
+        - 如果有冲突，必须手动解决冲突后再提交。git status也可以告诉我们冲突的文件。
+        - `git pull时出现冲突 放弃本地修改，使远程库内容强制覆盖本地代码`：
+            - git fetch --all//只是下载代码到本地，不进行合并操作
+            - git reset --hard origin/master//把HEAD指向最新下载的版本
+            - git pull
+    - 分支管理策略
+        - 通常，合并分支时，如果可能，Git会用Fast forward模式，但这种模式下，删除分支后，会丢掉分支信息。（开发者根本不会看到这个分支，就像在 master 直接 commit 一样。）
+        - 如果要强制禁用Fast forward模式（`--no-ff`），Git就会在merge时生成一个新的commit，这样，从分支历史上就可以看出分支信息。（可以看到开发分支在合并到master之前具体又有哪些commit，即强制保留分支的开发记录）
+        - git merge --no-ff -m "merge with no-ff" dev  //（因为本次合并要创建一个新的commit，所以加上-m参数，把commit描述写进去。）
+        - 分支策略：
+            - 首先，master分支应该是非常稳定的，也就是仅用来发布新版本，平时不能在上面干活；
+            - 干活都在dev分支上，也就是说，dev分支是不稳定的，到某个时候，比如1.0版本发布时，再把dev分支合并到master上，在master分支发布1.0版本；
+        - 合并分支时，加上--no-ff参数就可以用普通模式合并，合并后的历史有分支，能看出来曾经做过合并，而fast forward合并就看不出来曾经做过合并。
     - git stash的具体使用：
         - git stash  //把未完成的修改缓存到栈容器中
         - git stash list //查看所有的缓存
         - git stash pop //恢复本地分支到缓存状态，同时把stash内容删除
         - git stash apply  //恢复本地分支到缓存状态，但是恢复后，stash内容并不删除
         - git stash drop  //删除本地分支的缓存状态
+    - Bug分支
+        - `git stash`  //把当前工作现场“储藏”起来，等以后恢复现场后继续工作
+        - git checkout master //假定需要在master分支上修复Bug，就从master创建临时分支
+        - git checkout -b issue-101  //创建临时分支
+        - git checkout master //bug解决提交后切回master分支
+        - git merge --no-ff -m "merged bug fix 101" issue-101
+        - git checkout dev //回到dev分支干活
+        - `git stash pop` //恢复本地分支到缓存状态，同时把stash内容删除
     - git pull的具体使用：
         - git pull --rebase origin name //强制把远程库的代码跟新到当前分支上面
         - git fetch相当于是从远程获取最新版本到本地，但不会自动merge。如果需要有选择的合并git fetch是更好的选择。效果相同时git pull将更为快捷。[参考资料](https://www.cnblogs.com/qiu-Ann/p/7902855.html)
-    - git remote的具体使用：
-        - git remote  //查看远程库的信息
-        - git remote -v  //显示更详细的信息
-        - git remote add origin git@gitee.com:liaoxuefeng/learngit.git  //关联远程库
-        - git remote rm origin //删除已有的Github远程库
+    - 多人协作
+        - 当你从远程仓库克隆时，实际上Git自动把本地的master分支和远程的master分支对应起来了，并且，远程仓库的默认名称是`origin`。
+        - git remote  //查看远程库的信息 （git remote -v显示更详细的信息）
+        - 推送分支：就是把该分支上的所有本地提交推送到远程库。推送时，要指定本地分支，这样，Git就会把该分支推送到远程库对应的远程分支上：
+            - git checkout -b dev origin/dev  //创建远程origin的dev分支到本地（在本地创建和远程分支对应的分支，使用git checkout -b branch-name origin/branch-name，本地和远程分支的名称最好一致；）
+            - git push origin master  //master-本地分支
+            - git push origin dev //推送其他分支-dev
+            - master分支是主分支，因此要时刻与远程同步；
+            - dev分支是开发分支，团队所有成员都需要在上面工作，所以也需要与远程同步；
+            - bug分支只用于在本地修复bug，就没必要推到远程了，除非老板要看看你每周到底修复了几个bug；
+            - feature分支是否推到远程，取决于你是否和你的小伙伴合作在上面开发。
+        - 抓取分支：
+            - 首先，可以试图用`git push origin branch-name` 推送自己的修改；
+            - 如果推送失败，则因为远程分支比你的本地更新，需要先用`git pull`试图合并；
+            - 如果合并有冲突，则解决冲突，并在本地提交；
+            - 没有冲突或者解决掉冲突后，再用`git push origin branch-name` 推送就能成功；
+            - 如果git pull提示`no tracking information`，则说明本地分支和远程分支的链接关系没有创建，用命令git branch --set-upstream-to ‘branch-name’ origin/‘branch-name’。  //git branch --set-upstream-to=origin/dev dev
+    - Rebase：
+        - 多人在同一个分支上协作时，很容易出现冲突。即使没有冲突，后push的童鞋不得不先pull，在本地合并，然后才能push成功。每次合并再push后，自己的提交记录会在前面，后面会跟上一些合并记录，这样会修改没有跟着时间线走，历史提交分叉了；
+        - `git rebase`  //rebase操作的特点：把分叉的提交历史“整理”成一条直线，看上去更直观。缺点是本地的分叉提交已经被修改过了。Git会把我们本地的提交“挪动”了位置，放到了pull到的远程提交之后，这样，整个提交历史就成了一条直线。rebase操作前后，最终的提交内容是一致的，但是，我们本地的commit修改内容已经变化了，它们的修改不再基于前一个提交，而是基于pull到的远程的提交，但最后的提交7e61ed4内容是一致的。
+    - 标签管理：（tag就是一个让人容易记住的有意义的名字，它跟某个commit绑在一起。）
+        - git tag name //可以在需要打标签的分支上打一个新标签（用于新建一个标签，默认为HEAD，也可以指定一个commit id） 
+        - git tag name commit_id //对提交过的commit打分支
+        - git tag  //查看标签
+        - git tag -a name -m "version 0.1 released" commit_id //创建带有说明的标签，用-a指定标签名，-m指定说明文字：
+        - git show tagname  //查看标签信息（标签不是按时间顺序列出，而是按字母排序的）
+        - git tag -d v0.1 //删除标签
+        - git push origin tagname  //推送标签到远程
+        - git push origin --tags //一次性推送全部尚未推送到远程的本地标签
+        - 删除远程标签：
+            - git tag -d tagname  //先从本地删除
+            - git push origin :refs/tags/tagname //然后，从远程删除
+    - 配置别名：
+        - git config --global alias.st status  //告诉Git，以后st就表示status（--global参数是全局参数，也就是这些命令在这台电脑的所有Git仓库下都有用。）（加上--global是针对当前用户起作用的，如果不加，那只针对当前的仓库起作用）
+        - git config --global alias.lg "log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit"
+        - 每个仓库的Git配置文件都放在.git/config文件中
 
 #### HTTP协议、https、http2；
 
-    [TCP/IP、HTTP、HTTPS、HTTP2.0](https://www.cnblogs.com/w1570631036/p/8119747.html)
+[TCP/IP、HTTP、HTTPS、HTTP2.0](https://www.cnblogs.com/w1570631036/p/8119747.html)
 
 #### webpack；
 
