--- a/docs/resources/面试题目/常见面试题.md
+++ b/docs/resources/面试题目/常见面试题.md
@@ -754,6 +754,93 @@ foo = function() {
 
 #### 18.实现一个浅拷贝和深拷贝
 
+- 浅拷贝
+
+```js
+var Chinese = {
+    nation:'中国'
+};
+
+function extendCopy(p) {
+    var c = {};
+    for (var i in p) {
+        c[i] = p[i];
+    }
+    c.uber = p;
+    return c;
+}
+//使用
+var Doctor = extendCopy(Chinese);
+Doctor.career = '医生';
+console.log(Doctor.nation); // 中国
+```
+
+浅拷贝有一个问题。那就是，如果父对象的属性等于数组或另一个对象，那么实际上，子对象获得的只是一个内存地址，而不是真正拷贝，因此存在父对象被篡改的可能。
+
+```js
+Chinese.birthPlaces = ['北京','上海','香港'];
+var Doctor = extendCopy(Chinese);
+Doctor.birthPlaces.push('厦门');
+console.log(Doctor.birthPlaces); //北京, 上海, 香港, 厦门
+console.log(Chinese.birthPlaces); //北京, 上海, 香港, 厦门
+```
+
+- 深拷贝
+
+递归调用"浅拷贝"就行了
+
+```js
+var Chinese = {
+    nation:'中国'
+};
+
+function deepCopy(p, c) {
+    var c = c || {};
+    for (var i in p) {
+        if (typeof p[i] === 'object') {
+            c[i] = (p[i].constructor === Array) ? [] : {};
+            deepCopy(p[i], c[i]);
+        } else {
+            c[i] = p[i];
+        }
+    }
+    return c;
+}
+//使用
+var Doctor = deepCopy(Chinese);
+Chinese.birthPlaces = ['北京','上海','香港'];
+Doctor.birthPlaces.push('厦门');
+console.log(Doctor.birthPlaces); //北京, 上海, 香港, 厦门
+console.log(Chinese.birthPlaces); //北京, 上海, 香港
+```
+
+#### 19.通过js实现删除点击的li标签
+
+```html
+<ul>
+	<li>111111</li>
+	<li>222</li>
+	<li>3333333333</li>	
+</ul>
+```
+```js
+<script>
+    function addEventListener(target,fn){
+        if(target.addEventListener){
+            target.addEventListener('click',fn,false);
+        }else{
+            target.attachEvent('onclick',fn);
+        }
+    }
+    addEventListener(document.getElementsByTagName('ul')[0],function(event){
+        var target = event.target;
+        if(target.tagName.toUpperCase()==='LI'){
+        this.removeChild(target);
+        }
+    });
+</script>
+```
+
 ---
 
 ## 衍生部分
